--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 107
-</p><p class="card-text">Number of spectra: 8941
-</p><p class="card-text">Last update: 2024-03-03, 16:18</p>
+<p class="card-text">Number of stars: 108
+</p><p class="card-text">Number of spectra: 8942
+</p><p class="card-text">Last update: 2024-03-03, 16:26</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1410,6 +1410,18 @@
       <td>2023-03-25</td>
       <td>2023-04-14</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="pnth3-18.html">PN Th 3-18</a></td>
+      <td>17 28 26.92</td>
+      <td>-28 38 34.63</td>
+      <td>1</td>
+      <td>2023-04-16</td>
+      <td>2023-04-16</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
