--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 108
-</p><p class="card-text">Number of spectra: 8942
-</p><p class="card-text">Last update: 2024-03-03, 16:26</p>
+<p class="card-text">Number of stars: 109
+</p><p class="card-text">Number of spectra: 8945
+</p><p class="card-text">Last update: 2024-03-03, 16:31</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1118,10 +1118,10 @@
       <td><a href="v455sco.html">V455 Sco</a></td>
       <td>17 07 21.73</td>
       <td>-34 05 14.43</td>
-      <td>4</td>
+      <td>6</td>
       <td>2020-05-25</td>
-      <td>2021-05-14</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-06-20</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-06-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1</td>
@@ -1422,6 +1422,18 @@
       <td>2023-04-16</td>
       <td>2023-04-16</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="rxpup.html">RX Pup</a></td>
+      <td>08 14 12.30</td>
+      <td>-41 42 29.08</td>
+      <td>1</td>
+      <td>2023-12-03</td>
+      <td>2023-12-03</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-12-03 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
