--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 109
-</p><p class="card-text">Number of spectra: 8945
-</p><p class="card-text">Last update: 2024-03-03, 16:31</p>
+<p class="card-text">Number of stars: 112
+</p><p class="card-text">Number of spectra: 8951
+</p><p class="card-text">Last update: 2024-03-03, 16:40</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1118,7 +1118,7 @@
       <td><a href="v455sco.html">V455 Sco</a></td>
       <td>17 07 21.73</td>
       <td>-34 05 14.43</td>
-      <td>6</td>
+      <td>7</td>
       <td>2020-05-25</td>
       <td>2023-06-20</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-06-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -1166,10 +1166,10 @@
       <td><a href="hen2-247.html">Hen 2-247</a></td>
       <td>17 34 17.21</td>
       <td>-19 09 22.80</td>
-      <td>4</td>
+      <td>5</td>
       <td>2020-05-27</td>
-      <td>2021-05-16</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2023-05-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-05-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1</td>
@@ -1434,6 +1434,42 @@
       <td>2023-12-03</td>
       <td>2023-12-03</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-12-03 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="v3929sgr.html">V3929 Sgr</a></td>
+      <td>18 20 58.86</td>
+      <td>-26 48 25.63</td>
+      <td>1</td>
+      <td>2023-07-10</td>
+      <td>2023-07-10</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="v4074sgr.html">V4074 Sgr</a></td>
+      <td>18 16 05.53</td>
+      <td>-30 51 13.50</td>
+      <td>1</td>
+      <td>2023-05-17</td>
+      <td>2023-05-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-05-17 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="hen3-1591.html">Hen 3-1591</a></td>
+      <td>18 07 32.01</td>
+      <td>-25 53 43.32</td>
+      <td>2</td>
+      <td>2023-05-15</td>
+      <td>2023-06-20</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-06-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
