--- a/symbiotics.html
+++ b/symbiotics.html
@@ -74,7 +74,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 112
 </p><p class="card-text">Number of spectra: 8961
-</p><p class="card-text">Last update: 2024-03-06, 17:40</p>
+</p><p class="card-text">Last update: 2024-03-07, 06:59</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1019,18 +1019,6 @@
       <td>2</td>
     </tr>
     <tr>
-      <td><a href="als1.html">[ALS88] 1</a></td>
-      <td>19 16 16.08</td>
-      <td>-08 17 45.90</td>
-      <td>3</td>
-      <td>2020-07-20</td>
-      <td>2021-06-09</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
-      <td>30</td>
-      <td>-</td>
-      <td>1</td>
-    </tr>
-    <tr>
       <td><a href="as316.html">AS 316</a></td>
       <td>18 42 32.80</td>
       <td>-21 17 46.66</td>
@@ -1470,6 +1458,18 @@
       <td>2023-05-15</td>
       <td>2023-06-20</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-06-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>3</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="[als88]1.html">[ALS88] 1</a></td>
+      <td>19 16 16.07</td>
+      <td>-08 17 45.89</td>
+      <td>3</td>
+      <td>2020-07-20</td>
+      <td>2021-06-09</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>3</td>
       <td>2</td>
