--- a/novasco2024.html
+++ b/novasco2024.html
@@ -68,7 +68,7 @@
       <h5 class="card-title">Nova Sco 2024</h5>
       <p class="card-text">RA (2000): 17 26 18.09</p>
   <p class="card-text">DEC (2000):  -38 09 36.3</p>
-  <p class="card-text">V (mag): MagnitudeV</p>
+  <p class="card-text">V max: 7</p>
       <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=Nom2&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
