--- a/observers.html
+++ b/observers.html
@@ -672,6 +672,8 @@
       <td></td>
       <td></td>
     </tr>
+
+
     <tr>
       <td>TME</td>
       <td>Tomáš Medulka</td>
@@ -679,6 +681,16 @@
       <td></td>
       <td></td>
     </tr>
+
+<tr>
+      <td>TLO</td>
+      <td>Tom Love</td>
+      <td>New Zeland</td>
+      <td></td>
+      <td></td>
+    </tr>
+
+
     <tr>
       <td>TRO</td>
       <td>Tony Rodda</td>
