--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 112
-</p><p class="card-text">Number of spectra: 9335
-</p><p class="card-text">Last update: 2024-06-11, 07:52</p>
+<p class="card-text">Number of stars: 116
+</p><p class="card-text">Number of spectra: 9344
+</p><p class="card-text">Last update: 2024-06-11, 08:08</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1046,10 +1046,10 @@
       <td><a href="clsco.html">CL Sco</a></td>
       <td>16 54 51.97</td>
       <td>-30 37 18.26</td>
-      <td>4</td>
+      <td>5</td>
       <td>2020-05-30</td>
-      <td>2023-04-20</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-04-20 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2024-05-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-05-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
       <td>1</td>
@@ -1473,6 +1473,54 @@
       <td>30</td>
       <td>3</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="clsco.html">CL Sco</a></td>
+      <td>16 54 51.97</td>
+      <td>-30 37 18.26</td>
+      <td>5</td>
+      <td>2020-05-30</td>
+      <td>2024-05-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-05-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="as255.html">AS 255</a></td>
+      <td>17 57 08.71</td>
+      <td>-35 15 37.80</td>
+      <td>1</td>
+      <td>2024-05-27</td>
+      <td>2024-05-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-05-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="as255.html">AS 255</a></td>
+      <td>17 57 08.71</td>
+      <td>-35 15 37.80</td>
+      <td>1</td>
+      <td>2024-05-27</td>
+      <td>2024-05-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-05-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="as255.html">AS 255</a></td>
+      <td>17 57 08.71</td>
+      <td>-35 15 37.80</td>
+      <td>1</td>
+      <td>2024-05-27</td>
+      <td>2024-05-27</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-05-27 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>1</td>
     </tr>
   </tbody>
 </table><br><br>
