--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           <li class="nav-item">
-            <a class="nav-link" href="Observers.html">Observers</a>
+            <a class="nav-link" href="observers.html">Observers</a>
 
           </li>
         </ul>
