--- a/raqr.html
+++ b/raqr.html
@@ -90,9 +90,11 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-success mb-3">
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
 <div class="card-body">
-<h5 class="card-title">Ongoing campaign</h5></div>
+<h5 class="card-title">Eclipse of the hot component</h5>
+<p class="card-text"><p class="card-text">Ongoing campaign</p>
+</div>
 </div>
 <br>
 
