--- a/symbiotics.html
+++ b/symbiotics.html
@@ -74,7 +74,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 113
 </p><p class="card-text">Number of spectra: 9443
-</p><p class="card-text">Last update: 2024-07-13, 08:02</p>
+</p><p class="card-text">Last update: 2024-07-13, 10:55</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -87,7 +87,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text">Current campaigns: AG Dra, CH Cyg, R Aqr</p>
+<p class="card-text">Current campaigns: AG Dra, CH Cyg</p>
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
 <p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CN Cha</p>
 		<br><br>
