--- a/tcrb.html
+++ b/tcrb.html
@@ -92,8 +92,8 @@
 
 <br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
 <div class="card-body">
-<h5 class="card-title">Pre-Outburst State (high accretion rate)</h5>
-<p class="card-text"><p class="card-text">One spectrum/day until next outburst</p>
+<h5 class="card-title">Pre-Outburst State (low accretion rate)</h5>
+<p class="card-text"><p class="card-text">One spectrum/day until the next nova outburst</p>
 </div>
 </div>
 <br>
