--- a/observers.html
+++ b/observers.html
@@ -611,6 +611,13 @@
       <td></td>
     </tr>
     <tr>
+      <td>PAL</td>
+      <td>Paolo Aldinucci</td>
+      <td>Italy</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
       <td>PCA</td>
       <td>Paolo Cazzato</td>
       <td>Italy</td>
