--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 70
-</p><p class="card-text">Number of spectra: 4321
-</p><p class="card-text">Last update: 2024-07-31, 15:30</p>
+</p><p class="card-text">Number of spectra: 4322
+</p><p class="card-text">Last update: 2024-08-01, 08:23</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -875,15 +875,15 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-04-10 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>Nova Vul 2024</td>
+      <td><a href="novavul2024.html">Nova Vul 2024</a></td>
       <td>19 43 07.51</td>
       <td>+21 00 20.4</td>
       <td></td>
       <td>PNV J19430751+2100204</td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
+      <td>1</td>
+      <td>2024-07-31</td>
+      <td>2024-07-31</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-07-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
