--- a/novavul2024.html
+++ b/novavul2024.html
@@ -68,9 +68,8 @@
       <h5 class="card-title">Nova Vul 2024</h5>
       <p class="card-text">RA (2000): 19 43 07.51</p>
   <p class="card-text">DEC (2000):  +21 00 20.4</p>
-  <p class="card-text">V (mag): MagnitudeV</p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/Nom1/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=Nom2&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
+  <p class="card-text">V (mag): 9.5</p>
+ 
   </div>
   </div>
 </div><div class="col-sm-6">
@@ -250,10 +249,7 @@
   <!-- Footer --><br><br><br>
 <footer class="page-footer font-small blue">
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark" style="color:white">© 2022 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
-  </div>
-  <!-- Copyright -->
+
 
 </footer>
 <!-- Footer -->
